Add animation to bear eyes

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 #bear:hover #left-ear, #bear:hover #right-ear {
-  animation: ear-up .5s .5s ease-in-out;
+  animation: ear-up .5s ease-in;
 
 }
 
@@ -14,6 +14,20 @@
   }
 
 }
-#bear:hover #left-ear, .bear:hover #right-ear {
+
+#bear:hover #left-eye, #bear:hover #right-eye {
+  animation: shifty-eyes 2s linear;
+
+}
+
+@keyframes shifty-eyes {
+
+  from {
+    transform: translate(0,0);
+  }
+
+  to {
+    transform: translate(15px,0);
+  }
 
 }
