--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   transition: .5s ease-in-out;
 }
 
-@keyframes shifty-eyes {
+@keyframes shifty {
 
   0% {
     transform: translate(0, 0);
@@ -25,9 +25,9 @@
 }
 
 #bear:hover #right-eye {
-  animation: shifty-eyes 3s linear alternate;
+  animation: shifty 3s linear alternate;
 }
 
 #bear:hover #left-eye {
-  animation: shifty-eyes 3s linear alternate;
+  animation: shifty 3s linear alternate;
 }
